--- a/src/css/home.css
+++ b/src/css/home.css
@@ -8,7 +8,7 @@
     width: 150px;
     height: 150px;
     background-color: grey;
-    background-image: url(../assets/IMG_9893.JPEG);
+    background-image: url(../assets/IMG_9893.jpg);
     background-size: contain;
     background-position: center;
     border-radius: 100px;
